[package]
name = "vaccel-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "^1.0"
async-trait = "0.1.48"
log = "0.4.14"
slog = "2.5.2"
slog-scope = "4.4.0"
tokio = { version = "1.38.0", features = ["fs", "rt-multi-thread", "macros", "process", "sync"] }
ttrpc = { git = "https://github.com/nubificus/ttrpc-rust.git", branch = "vaccel-dev", features = ["async"] }
url = { version = "2.3.1" }

agent = { path = "../agent" }
kata-types = { path = "../../../libs/kata-types" }
logging = { path = "../../../libs/logging" }

vaccel-rpc-agent = { git = "https://github.com/nubificus/vaccel-rust", branch="main", optional = true }
vaccel = { git = "https://github.com/nubificus/vaccel-rust", branch = "main", optional = true }

[features]
builtin = ["dep:vaccel-rpc-agent", "dep:vaccel"]
